# offstat-final-project

./: main.ipynb  main.py  pyproject.toml
data/: heart_failure_clinical_records_dataset.prepro.csv
