[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupytext>=1.19.3",
    "kaggle<2.2.0",
    "kagglehub>=1.0.1",
    "kagglesdk==0.1.23",
    "lifelines>=0.30.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
